2.1.0/_sources/gallery/images_contours_and_fields/spy_demos.rst.txt


.. _sphx_glr_gallery_images_contours_and_fields_spy_demos.py:


=========
Spy Demos
=========

Plot the sparsity pattern of arrays




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_spy_demos_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    import numpy as np

    fig, axs = plt.subplots(2, 2)
    ax1 = axs[0, 0]
    ax2 = axs[0, 1]
    ax3 = axs[1, 0]
    ax4 = axs[1, 1]

    x = np.random.randn(20, 20)
    x[5, :] = 0.
    x[:, 12] = 0.

    ax1.spy(x, markersize=5)
    ax2.spy(x, precision=0.1, markersize=5)

    ax3.spy(x)
    ax4.spy(x, precision=0.1)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.067 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: spy_demos.py <spy_demos.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: spy_demos.ipynb <spy_demos.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
